--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           fetch-depth: 0 
           
-      - name: ⚙️ Manual Git Clone and CMake Build (Final Resilient Script)
+      - name: ⚙️ Manual Git Clone, Setup, and Build
         shell: bash
         run: |
           # --- Configuration Variables ---
@@ -31,9 +31,13 @@ jobs:
           ZMK_REVISION="v0.3" 
           ZMK_REPO_ROOT="$GITHUB_WORKSPACE/zmk"
           
+          # --- Path Definitions ---
+          ZEPHYR_DIR="$ZMK_REPO_ROOT/zephyr"
+          ZEPHYR_ENV_SCRIPT="$ZEPHYR_DIR/zephyr-env.sh"
+          
           # 1. Create the base ZMK structure
           echo "--- 1. Creating target directories ---"
-          mkdir -p "$ZMK_REPO_ROOT/zephyr"
+          mkdir -p "$ZEPHYR_DIR"
           mkdir -p "$ZMK_REPO_ROOT/app"
           mkdir -p "$ZMK_REPO_ROOT/bootloader/mcuboot"
 
@@ -41,23 +45,42 @@ jobs:
           echo "--- 2. Cloning ZMK App (Path: zmk/app) ---"
           git clone --depth 1 --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_REPO_ROOT/app" || exit 1
           echo "--- 3. Cloning Zephyr RTOS (Path: zmk/zephyr) ---"
-          git clone --depth 1 --branch "$ZEPHYR_REVISION" https://github.com/zephyrproject-rtos/zephyr.git "$ZMK_REPO_ROOT/zephyr" || exit 1
+          git clone --depth 1 --branch "$ZEPHYR_REVISION" https://github.com/zephyrproject-rtos/zephyr.git "$ZEPHYR_DIR" || exit 1
           echo "--- 4. Cloning MCUBoot (Path: zmk/bootloader/mcuboot) ---"
           git clone --depth 1 --branch "$MCUB_REVISION" https://github.com/mcu-tools/mcuboot.git "$ZMK_REPO_ROOT/bootloader/mcuboot" || exit 1
 
-          # 5. Sourcing Zephyr Environment
-          echo "--- 5. Sourcing Zephyr Environment Variables ---"
-          . "$ZMK_REPO_ROOT/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
+          # 5. 🔍 VALIDATION CHECK: Verify critical Zephyr paths and files
+          echo "--- 5. VALIDATING ZEPHYR ENVIRONMENT ---"
+          
+          # Check 1: Zephyr directory exists
+          if [ ! -d "$ZEPHYR_DIR" ]; then
+              echo "FATAL: Zephyr base directory not found at $ZEPHYR_DIR"
+              exit 1
+          fi
+          
+          # Check 2: zephyr-env.sh exists
+          if [ ! -f "$ZEPHYR_ENV_SCRIPT" ]; then
+              echo "FATAL: Zephyr environment script not found at $ZEPHYR_ENV_SCRIPT"
+              echo "Diagnostic: Listing contents of $ZEPHYR_DIR"
+              ls -l "$ZEPHYR_DIR"
+              exit 1
+          fi
+          
+          echo "TRACE: Zephyr environment checks passed."
 
-          # 6. Build Setup and CMake Execution
-          echo "--- 6. Starting Final CMake Build ---"
+          # 6. Sourcing Zephyr Environment
+          echo "--- 6. Sourcing Zephyr Environment Variables ---"
+          . "$ZEPHYR_ENV_SCRIPT" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
+
+          # 7. Build Setup and CMake Execution
+          echo "--- 7. Starting Final CMake Build ---"
           
           # --- Path Definitions ---
           APP_REPO_DIR="$ZMK_REPO_ROOT/app"
           BUILD_DIR="$APP_REPO_DIR/build"
           APP_SOURCE_DIR="$APP_REPO_DIR" # Start by assuming CMakeLists.txt is here
           
-          # 7. Backup Plan: Check for nested 'app' directory
+          # 8. Backup Plan: Check for nested 'app' directory
           if [ -f "$APP_REPO_DIR/app/CMakeLists.txt" ]; then
              echo "TRACE: Found CMakeLists.txt in nested app directory. Adjusting source path."
              APP_SOURCE_DIR="$APP_REPO_DIR/app"
@@ -69,18 +92,18 @@ jobs:
              echo "TRACE: Found CMakeLists.txt in expected top-level ZMK app directory."
           fi
 
-          # 8. Execute CMake
+          # 9. Execute CMake
           echo "TRACE: Source Directory Final Path: $APP_SOURCE_DIR"
           
-          # A. CMake Configure Step (FINAL FIX: Explicitly define all Zephyr paths)
+          # A. CMake Configure Step (Defines all necessary paths explicitly)
           cmake -B "$BUILD_DIR" \
             -GNinja \
             -DBOARD=nice_nano_v2 \
             -DSHIELD=crkbd_left \
             -DZMK_CONFIG="$GITHUB_WORKSPACE/config" \
-            -DZEPHYR_BASE="$ZMK_REPO_ROOT/zephyr" \
-            -DCMAKE_PREFIX_PATH="$ZMK_REPO_ROOT/zephyr" \
-            -DZEPHYR_DIR="$ZMK_REPO_ROOT/zephyr" \
+            -DZEPHYR_BASE="$ZEPHYR_DIR" \
+            -DCMAKE_PREFIX_PATH="$ZEPHYR_DIR" \
+            -DZEPHYR_DIR="$ZEPHYR_DIR" \
             -S "$APP_SOURCE_DIR" || { echo "FATAL: CMake configuration failed."; exit 1; }
             
           # B. CMake Build Execution Step
