--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: ZMK Resilient West Dependency Build (Corrected Init)
+name: ZMK Resilient West Dependency Build (Finalized)
 
 on:
   push:
@@ -22,15 +22,15 @@ jobs:
         with:
           fetch-depth: 0 
           
-      - name: ⚙️ West-Managed Build with Correct Manifest Syntax
+      - name: ⚙️ West-Managed Build with Correct File Handling
         shell: bash
         run: |
           # --- Configuration Variables ---
           ZMK_REVISION="v0.3" 
-          ZMK_CLONE_DIR="$GITHUB_WORKSPACE/app_clone" # ZMK Application source clone
-          ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace" # The West workspace root
+          ZMK_CLONE_DIR="$GITHUB_WORKSPACE/app_clone" # Temporary ZMK application source clone
+          ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace" # The West workspace root (where build occurs)
           
-          # --- 1. Basic Tool Validation ---
+          # --- 1. Tool Validation ---
           echo "--- 1. Validating West Tool ---"
           command -v west || { echo "FATAL: 'west' tool not found in container path."; exit 1; }
           
@@ -41,10 +41,9 @@ jobs:
           echo "--- 3. Initializing West Workspace with Correct Manifest Path ---"
           mkdir -p "$ZMK_ROOT" || { echo "FATAL: Failed to create ZMK workspace directory."; exit 1; }
           
-          # 🚀 FIX: Use -m (manifest URL) for the repository and --mf (manifest file) 
-          # for the relative path inside the repository to point to app/west.yml.
+          # 🚀 FIX 1 (West Init): Correctly points to the manifest file inside the cloned repository's 'app' folder.
           west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT" || { 
-            echo "FATAL: West initialization failed. Manifest file structure is still incorrect."
+            echo "FATAL: West initialization failed."
             exit 1 
           }
 
@@ -56,12 +55,19 @@ jobs:
           west update || { echo "FATAL: West update failed. Dependency cloning failed."; exit 1; }
           
           # --- 5. Prepare Application and Custom Configuration ---
-          echo "--- 5. Setting up Application Structure ---"
+          echo "--- 5. Preparing Application Source and Custom Configuration ---"
           
-          # Copy ZMK app contents into the expected 'app' directory within the workspace
+          # Create the app directory in the workspace
           mkdir -p "$ZMK_ROOT/app" || { echo "FATAL: Failed to create app directory in workspace."; exit 1; }
-          # Copy everything from the cloned ZMK app directory's root to the workspace app folder
-          cp -r "$ZMK_CLONE_DIR/"* "$ZMK_ROOT/app" || { echo "FATAL: Failed to copy ZMK app files."; exit 1; }
+          
+          # 🚀 FIX 2 (Source Copy): Copies the CONTENTS of the NESTED 'app' folder (which contains CMakeLists.txt)
+          # into the workspace's build folder. This solves the "doesn't contain a CMakeLists.txt" error.
+          if [ -d "$ZMK_CLONE_DIR/app" ]; then
+             cp -r "$ZMK_CLONE_DIR/app/"* "$ZMK_ROOT/app" || { echo "FATAL: Failed to copy ZMK app files."; exit 1; }
+          else
+             echo "FATAL: ZMK 'app' source directory not found in clone. Repository structure is unexpected."
+             exit 1
+          fi
           
           # Copy custom config files to the application source location
           if [ -f "$GITHUB_WORKSPACE/config/nice_nano_v2.overlay" ]; then
@@ -78,7 +84,7 @@ jobs:
              . "$ZEPHYR_ENV_SCRIPT" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
              echo "TRACE: Zephyr environment sourced successfully."
           else
-             echo "FATAL: zephyr-env.sh script not found. West update failed to clone Zephyr core."
+             echo "FATAL: zephyr-env.sh script not found."
              exit 1
           fi
 
